# micro_rov_core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt  Config.cmake.in  PolitoceanMicroRovConfig.cmake
libs/Brushless/: Brushless.h  CMakeLists.txt
libs/Controller/: CMakeLists.txt
libs/PwmMotor/: CMakeLists.txt
src/: client.cpp  main.cpp  main_w_camera.cpp  sender.cpp  server.cpp
